# fof99

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: python-publish.yml
src/fof99/: __init__.py
src/fof99/requests/: baserequest.py  combirequest.py  companyrequest.py  factorrequest.py  fundrequest.py  gmfundrequest.py  indexrequest.py  traderequest.py
test/: test_fundinfo.py  test_fundrequest.py
