[project]
name = "fof99"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "xuanq", email = "xuanqiraphael@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
fof99 = "fof99:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
