[project]
name = "fof99"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
authors = "fof99.com"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "requests>=2.32.5",
]

[project.scripts]
fof99 = "fof99:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
